# invent

./: .gitignore  CMakeLists.txt  conanfile.txt
conan_recipes/: conanfile.py  libxlnt.so.1.2
service/: CMakeLists.txt
service/src/: client.cpp  config.h  main.cpp
